--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -7,11 +7,11 @@
   <meta name="description" content="">
   <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
   <meta name="generator" content="Hugo 0.98.0">
-  <title>Dashboard Template · Bootstrap v5.2</title>
+  <title>Google Sheets Integration</title>
 
   <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/dashboard/">
 
-  <link href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
   <meta name="theme-color" content="#712cf9">
@@ -72,7 +72,7 @@
 
 <body>
   <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-    <h2>Section title</h2>
+    <h2>Updated table.</h2>
     <div class="table-responsive">
       <table class="table table-striped table-sm">
         <thead>
